# hotpepper-gourmet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  modules.rst  pyproject.toml  search_restaurants.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  integrate.yml  job_pytest.yml  publish-dev.yml  publish.yml  pytest.yml
diagrams/: sequence.puml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst  pygourmet.rst
docs/source/resources/: api.rst  exceptions.rst  modules.rst  pygourmet.rst
examples/: search_restaurants.py
pygourmet/: __init__.py  api.py  api_client.py  client.py  coordinates.py  errors.py  exceptions.py  option.py  params.py
src/pygourmet/: __init__.py  client.py  errors.py  option.py  shop.py
tests/: conftest.py  test_client.py  test_client_dummy.py  test_coordinates.py  test_search.py
tests/data/: restaurant_resp.json  restaurant_resp_0.json  restaurant_resp_1.json
