[project]
name = "hotpepper-gourmet"
# version = "0.0.0"
dynamic = ["version"]
description = "A simple Python client of Hotpepper API"
authors = [{ name = "Miura Kosuke", email = "being.paperlefthand@gmail.com" }]
maintainers = [
    { name = "Miura Kosuke", email = "being.paperlefthand@gmail.com" },
]
keywords = ["hotpepper", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE.txt" }

requires-python = ">=3.11"

dependencies = ["httpx>=0.27.2", "pydantic>=2.9.2"]

[project.urls]
Repository = "https://github.com/paperlefthand/hotpepper-gourmet"
Documentation = "https://hotpepper-gourmet.readthedocs.io"

[tool.uv]
dev-dependencies = [
    "esbonio>=0.16.5",
    "myst-parser>=4.0.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-httpx>=0.32.0",
    "ruff>=0.6.8",
    "sphinx>=8.0.2",
    "sphinx-fontawesome>=0.0.6",
    "sphinx-rtd-theme>=0.5.1",
    "sphinx-autobuild>=2024.9.19",
    "setuptools-scm>=8.1.0",
]

[tool.setuptools_scm]


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
