[project]
name = "hotpepper-gourmet"
dynamic = ["version"]
description = "A simple Python client of Hotpepper API"
authors = [{ name = "Miura Kosuke", email = "being.paperlefthand@gmail.com" }]
maintainers = [
    { name = "Miura Kosuke", email = "being.paperlefthand@gmail.com" },
]
keywords = ["hotpepper", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE.txt" }

requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]

[project.urls]
Repository = "https://github.com/paperlefthand/hotpepper-gourmet"
Documentation = "https://hotpepper-gourmet.readthedocs.io"

# [tool.tox]
# requires = ["tox>=4.2", "tox-uv>=1.11.3"]
# isolated_build = true
# env_list = ["py312", "py313", "type", "fix"]
# env_list = ["py312", "py313"]

# [tool.tox.testenv]
# description = "run the unit tests with pytest under {base_python}"
# runner = "uv-venv-lock-runner"
# package = "editable"
# deps = ["pytest>=8.3.3"]
# commands = ["pytest", "-v", "tests"]

# [tool.tox.testenv.fix]
# description = "run code formatter and linter (auto-fix)"
# skip_install = true
# deps = "pre-commit-uv>=4.1.1"
# commands = "pre-commit run --all-files --show-diff-on-failure"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pygourmet --cov-report html"

[tool.ruff.lint]
ignore = ["E741"] # 1文字変数を許容

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
strict = true
exclude = "^tests/"

[tool.uv]
dev-dependencies = [
    "esbonio>=0.16.5",
    "myst-parser>=4.0.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-httpx>=0.32.0",
    "sphinx>=8.0.2",
    "sphinx-fontawesome>=0.0.6",
    # "sphinx-rtd-theme>=2.0.0", # Sphinx8未対応
    "sphinx-autobuild>=2024.9.19",
    "setuptools-scm>=8.1.0",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "mypy>=1.12.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools_scm]


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
